--- a/test/simple.html
+++ b/test/simple.html
@@ -15,8 +15,8 @@
 
     <script>
         $(function () {
-            $("#organisation").orgchart({
-                container: $("#main"),
+            $("#main").orgchart({
+                // container: $("#main"),
                 renderData: [{
                     id: 'a',
                     pid: null,
